--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
-<title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Hot or Not</title>
+<link rel="stylesheet" href="/styles.css">
 <main></main>
 <script src="/bundle.js"></script>
