--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!doctype html>
-<title></title>
-<main></main>
-<script src="/bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8" />
+        <title>Summer Night</title>
+        <link rel="stylesheet" href="/public/styles.css" />
+    </head>
+    <body>
+        <main></main>
+
+        <script src="/bundle.js"></script>
+    </body>
+</html>
