--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Summer Night</title>
         <link rel="stylesheet" href="/styles.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300i,400,400i,700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <main></main>
